# VulkanNanite

./: CMakeLists.txt  README.md  build.bat  compileShader.bat  config.bat  run.bat
include/: EasyVKStart.h  GlfwGeneral.hpp  MeshSimpler.hpp  MyDataType.h  MyMesh.h  MyModel.hpp  MyView.h  MyViewMgr.h  NaniteMgr.hpp  VKBase+.h  VKBase.h  common.h
shaders/: virtualMesh.frag  virtualMesh.vert  virtualMesh.vert.spv
src/: main.cpp
